@@ -15,6 +15,7 @@ import javafx.scene.layout.*;
 import javafx.scene.paint.Paint;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
+import javax.xml.crypto.Data;
 import org.controlsfx.control.StatusBar;
 import seng302.GUI.StatusIndicator;
 import seng302.GUI.TFScene;
@@ -29,6 +30,7 @@ import java.time.LocalDate;
 import java.util.*;
 
 import static seng302.Generic.IO.streamOut;
+import static seng302.Generic.WindowManager.setButtonSelected;
 
 /**
  * Class which handles all the logic for the User Window.
@@ -36,63 +38,47 @@ import static seng302.Generic.IO.streamOut;
  * Saving, Undo, Redo, All input fields and more.
  */
 public class UserWindowController implements Initializable {
-
-    private TitleBar titleBar;
     @FXML
-    private Label userDisplayText, settingAttributesLabel, ageLabel, bmiLabel, bloodPressureLabel, userHistoryLabel;
+    private Label userDisplayText, userHistoryLabel;
     @FXML
-    private GridPane attributesGridPane, historyGridPane, background;
+    private GridPane historyGridPane, background;
     @FXML
-    private AnchorPane medicationsPane, medicalHistoryDiseasesPane, medicalHistoryProceduresPane;
+    private AnchorPane medicationsPane, medicalHistoryDiseasesPane, medicalHistoryProceduresPane, attributesPane;
     @FXML
     private AnchorPane waitingListPane;
     @FXML
     private Pane welcomePane;
     @FXML
-    private TextField firstNameField, middleNameField, lastNameField, addressField, regionField, heightField, weightField, bloodPressureTextField, preferredFirstNameField, preferredMiddleNamesField, preferredLastNameField;
-    @FXML
-    private DatePicker dateOfBirthPicker, dateOfDeathPicker;
-    @FXML
-    private ComboBox<Gender> genderComboBox, genderIdentityComboBox;
-    @FXML
-    private ComboBox<BloodType> bloodTypeComboBox;
-    @FXML
-    private ComboBox<SmokerStatus> smokerStatusComboBox;
-    @FXML
-    private ComboBox<AlcoholConsumption> alcoholConsumptionComboBox;
-    @FXML
-    private CheckBox liverCheckBox, kidneyCheckBox, pancreasCheckBox, heartCheckBox, lungCheckBox, intestineCheckBox, corneaCheckBox,
-            middleEarCheckBox, skinCheckBox, boneMarrowCheckBox, connectiveTissueCheckBox;
-    @FXML
     private MenuItem undoButton, redoButton, logoutMenuItem;
     @FXML
-    private Button logoutButton, undoBannerButton, redoBannerButton, medicationsButton, medicalHistoryButton, waitingListButton;
+    private Button logoutButton, undoBannerButton, redoBannerButton, medicationsButton, waitingListButton,
+            userAttributesButton, diseasesButton, proceduresButton, historyButton;
     @FXML
     private TreeTableView<String> historyTreeTableView;
     @FXML
     private TreeTableColumn<String, String> dateTimeColumn, actionColumn;
-
-    private HashMap<Organ, CheckBox> organTickBoxes;
-
-    private ArrayList<User> waitingListUndoStack = new ArrayList<>(), waitingListRedoStack = new ArrayList<>();
-    private LinkedList<User> attributeUndoStack = new LinkedList<>(), attributeRedoStack = new LinkedList<>(), medicationUndoStack = new
-            LinkedList<>(), medicationRedoStack = new LinkedList<>();
-    private LinkedList<User> procedureUndoStack = new LinkedList<>(), procedureRedoStack = new LinkedList<>();
-    private LinkedList<User> diseaseUndoStack = new LinkedList<>(), diseaseRedoStack = new LinkedList<>();
-    private User currentUser;
-
     @FXML
     private StatusBar statusBar;
     @FXML
+    private UserAttributesController attributesController;
+    @FXML
     private MedicationsController medicationsController;
     @FXML
-    private MedicalHistoryDiseasesController medicalHistoryDiseasesController;
+    private MedicalHistoryDiseasesController diseasesController;
     @FXML
-    private MedicalHistoryProceduresController medicalHistoryProceduresController;
+    private MedicalHistoryProceduresController proceduresController;
     @FXML
     private WaitingListController waitingListController;
 
     public StatusIndicator statusIndicator = new StatusIndicator();
+    private TitleBar titleBar;
+
+    private LinkedList<User> waitingListUndoStack = new LinkedList<>(), waitingListRedoStack = new LinkedList<>();
+    private LinkedList<User> attributeUndoStack = new LinkedList<>(), attributeRedoStack = new LinkedList<>();
+    private LinkedList<User> medicationUndoStack = new LinkedList<>(), medicationRedoStack = new LinkedList<>();
+    private LinkedList<User> procedureUndoStack = new LinkedList<>(), procedureRedoStack = new LinkedList<>();
+    private LinkedList<User> diseaseUndoStack = new LinkedList<>(), diseaseRedoStack = new LinkedList<>();
+    private User currentUser;
 
 
     public UserWindowController() {
@@ -115,15 +101,46 @@ public class UserWindowController implements Initializable {
 
     public void setCurrentUser(User currentUser) {
         this.currentUser = currentUser;
-        userDisplayText.setText("Currently logged in as: " + currentUser.getPreferredName());
-        attributeUndoStack.clear();
-        attributeRedoStack.clear();
-        undoButton.setDisable(true);
-        undoBannerButton.setDisable(true);
-        redoButton.setDisable(true);
-        redoBannerButton.setDisable(true);
-        bloodPressureLabel.setText("");
+        setWelcomeText("Welcome, " + currentUser.getPreferredName());
+
+        diseasesController.setCurrentUser(currentUser);
+        proceduresController.setCurrentUser(currentUser);
+        waitingListController.setCurrentUser(currentUser);
+        waitingListController.populateWaitingList();
+        medicationsController.initializeUser(currentUser);
+        attributesController.setCurrentUser(currentUser);
+        attributesController.populateUserFields();
+
+        setUndoRedoButtonsDisabled(true, true);
+
         titleBar.setTitle(currentUser.getPreferredName(), "User", "Home");
+    }
+
+    public void setWelcomeText(String text) {
+        userDisplayText.setText(text);
+    }
+
+    /**
+     * Refresh the current user attributes from the user input fields and correctly set highlights for organs that are being donated and received.
+     */
+    public void populateUserAttributes() {
+        attributesController.populateUserFields();
+        attributesController.highlightOrganCheckBoxes();
+    }
+
+    /**
+     * Refresh the current user waiting list and correctly set highlights for organs that are being donated and received.
+     */
+    public void populateWaitingList() {
+        waitingListController.populateWaitingList();
+        attributesController.highlightOrganCheckBoxes();
+    }
+
+    /**
+     * Updates the list of diseases on the disease tab to the list stored in the current user.
+     */
+    public void updateDiseases() {
+        diseasesController.updateDiseases();
     }
 
     /**
@@ -134,37 +151,18 @@ public class UserWindowController implements Initializable {
      */
     @Override
     public void initialize(URL location, ResourceBundle resources) {
-        WindowManager.setUserWindowController(this);
-        welcomePane.setVisible(true);
-        attributesGridPane.setVisible(false);
-        historyGridPane.setVisible(false);
-        medicationsPane.setVisible(false);
-        genderComboBox.setItems(FXCollections.observableArrayList(Gender.values()));
-        genderIdentityComboBox.setItems(FXCollections.observableArrayList(Gender.values()));
-        bloodTypeComboBox.setItems(FXCollections.observableArrayList(BloodType.values()));
-        alcoholConsumptionComboBox.setItems(FXCollections.observableArrayList(AlcoholConsumption.values()));
-        smokerStatusComboBox.setItems(FXCollections.observableArrayList(SmokerStatus.values()));
-
-        organTickBoxes = new HashMap<>();
-        organTickBoxes.put(Organ.KIDNEY, kidneyCheckBox);
-        organTickBoxes.put(Organ.CORNEA, corneaCheckBox);
-        organTickBoxes.put(Organ.BONE, boneMarrowCheckBox);
-        organTickBoxes.put(Organ.LIVER, liverCheckBox);
-        organTickBoxes.put(Organ.EAR, middleEarCheckBox);
-        organTickBoxes.put(Organ.HEART, heartCheckBox);
-        organTickBoxes.put(Organ.INTESTINE, intestineCheckBox);
-        organTickBoxes.put(Organ.PANCREAS, pancreasCheckBox);
-        organTickBoxes.put(Organ.SKIN, skinCheckBox);
-        organTickBoxes.put(Organ.TISSUE, connectiveTissueCheckBox);
-        organTickBoxes.put(Organ.LUNG, lungCheckBox);
-
-        for(CheckBox checkbox:organTickBoxes.values()){
-            checkbox.selectedProperty().addListener((observable, oldValue, newValue) -> {
-                highlightOrganCheckBoxes();
-            });
+        if (WindowManager.getScene(TFScene.userWindow) == null) {
+            System.out.println("Setting this as the main user window controller. This should NOT be coming up if this is a child window (popup from clinician or admin)");
+            WindowManager.setUserWindowController(this);
         }
+        welcomePane.setVisible(true);
+        attributesController.setParent(this);
+        medicationsController.setParent(this);
+        diseasesController.setParent(this);
+        proceduresController.setParent(this);
+        waitingListController.setParent(this);
 
-        WindowManager.controlViewForUser();
+        setControlsShown(false);
 
         Image welcomeImage = new Image("/OrganDonation.jpg");
         BackgroundImage imageBackground = new BackgroundImage(welcomeImage,
@@ -172,95 +170,26 @@ public class UserWindowController implements Initializable {
                 BackgroundSize.DEFAULT);
         welcomePane.setBackground(new Background(imageBackground));
 
-        //Add listeners for attribute undo and redo
-        preferredFirstNameField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        preferredMiddleNamesField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        preferredLastNameField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        firstNameField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        middleNameField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        lastNameField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        addressField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        regionField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        dateOfBirthPicker.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        dateOfDeathPicker.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        heightField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        weightField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-        bloodPressureTextField.focusedProperty().addListener((observable, oldValue, newValue) -> {
-            if (!newValue) {
-                attributeFieldUnfocused();
-            }
-        });
-
-        //Add listeners to correctly update BMI and blood pressure based on user input
-        heightField.textProperty().addListener((observable, oldValue, newValue) -> updateBMI());
-        weightField.textProperty().addListener((observable, oldValue, newValue) -> updateBMI());
-        bloodPressureTextField.textProperty().addListener((observable, oldValue, newValue) -> updateBloodPressure());
-
         waitingListButton.setOnAction((ActionEvent event) -> {
             showWaitingListPane();
-            WindowManager.updateWaitingList();
-            WindowManager.getWaitingListController().populateOrgansComboBox();
+            waitingListController.populateWaitingList();
+            waitingListController.populateOrgansComboBox();
         });
 
         statusIndicator.setStatusBar(statusBar);
 
         // Pass the status bar and title bar objects to the embedded controllers
+        attributesController.setStatusIndicator(statusIndicator);
+        attributesController.setTitleBar(titleBar);
+
         medicationsController.setStatusIndicator(statusIndicator);
         medicationsController.setTitleBar(titleBar);
 
-        medicalHistoryDiseasesController.setStatusIndicator(statusIndicator);
-        medicalHistoryDiseasesController.setTitleBar(titleBar);
+        diseasesController.setStatusIndicator(statusIndicator);
+        diseasesController.setTitleBar(titleBar);
 
-        medicalHistoryProceduresController.setStatusIndicator(statusIndicator);
-        medicalHistoryProceduresController.setTitleBar(titleBar);
+        proceduresController.setStatusIndicator(statusIndicator);
+        proceduresController.setTitleBar(titleBar);
 
         waitingListController.setStatusIndicator(statusIndicator);
         waitingListController.setTitleBar(titleBar);
@@ -274,49 +203,31 @@ public class UserWindowController implements Initializable {
     }
 
     /**
-     * Checks for any new updates when an attribute field loses focus, and appends to the attribute undo stack if there is new changes.
+     * Add the current user object to the relevant undo stack.
      */
-    public void attributeFieldUnfocused() {
-        User oldFields = new User(currentUser);
-        if (updateUser() && !currentUser.fieldsEqual(oldFields)) {
-            attributeUndoStack.add(new User(oldFields));
+    public void addCurrentUserToUndoStack() {
+        if (attributesPane.isVisible()) {
+            attributeUndoStack.add(new User(currentUser));
             attributeRedoStack.clear();
-            setUndoRedoButtonsDisabled(false, true);
-            titleBar.saved(false);
-            statusIndicator.setStatus("Edited user details", false);
+        } else if (medicationsPane.isVisible()) {
+            medicationUndoStack.add(new User(currentUser));
+            medicationRedoStack.clear();
+        } else if (medicalHistoryDiseasesPane.isVisible()) {
+            diseaseUndoStack.add(new User(currentUser));
+            diseaseRedoStack.clear();
+        } else if (medicalHistoryProceduresPane.isVisible()) {
+            procedureUndoStack.add(new User(currentUser));
+            procedureRedoStack.clear();
+        } else if (waitingListPane.isVisible()) {
+            waitingListUndoStack.add(new User(currentUser));
+            waitingListRedoStack.clear();
         }
-    }
-
-    /**
-     * Add the current user object to the medications undo stack.
-     */
-    public void addCurrentToMedicationUndoStack() {
-        medicationUndoStack.add(new User(currentUser));
-        medicationRedoStack.clear();
         setUndoRedoButtonsDisabled(false, true);
     }
 
-    public void addCurrentToDiseaseUndoStack() {
-        diseaseUndoStack.add(new User(currentUser));
-        diseaseRedoStack.clear();
-        setUndoRedoButtonsDisabled(false, true);
-    }
-
-    /**
-     * Add the current user object to the procedures undo stack.
-     */
-    public void addCurrentToProceduresUndoStack() {
-        procedureUndoStack.add(new User(currentUser));
-        procedureRedoStack.clear();
-        setUndoRedoButtonsDisabled(false, true);
-    }
-
-    /**
-     * Adds the current user object to the waiting list undo stack.
-     */
-    public void addCurrentToWaitingListUndoStack() {
-        waitingListUndoStack.add(new User(currentUser));
-        waitingListRedoStack.clear();
+    public void addToAttributeUndoStack(User user) {
+        attributeUndoStack.add(new User(user));
+        attributeRedoStack.clear();
         setUndoRedoButtonsDisabled(false, true);
     }
 
@@ -333,131 +244,95 @@ public class UserWindowController implements Initializable {
         redoBannerButton.setDisable(redoDisabled);
     }
 
-    public void showWaitingListButton() {
-        waitingListButton.setVisible(true);
-    }
-
     /**
-     * Sets the history pane as the visible pane
+     * Hides all of the main panes.
      */
-    public void showHistoryPane() {
+    private void hideAllTabs() {
+        setButtonSelected(userAttributesButton, false);
+        setButtonSelected(medicationsButton, false);
+        setButtonSelected(diseasesButton, false);
+        setButtonSelected(proceduresButton, false);
+        setButtonSelected(historyButton, false);
+
         welcomePane.setVisible(false);
-        attributesGridPane.setVisible(false);
-        historyGridPane.setVisible(true);
+        attributesPane.setVisible(false);
+        historyGridPane.setVisible(false);
         medicalHistoryDiseasesPane.setVisible(false);
         medicalHistoryProceduresPane.setVisible(false);
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(true, true);
-        titleBar.setTitle(currentUser.getPreferredName(), "User", "Action History");
-    }
-
-
-    public void showWaitingListPane() {
-        welcomePane.setVisible(false);
-        attributesGridPane.setVisible(false);
-        medicalHistoryDiseasesPane.setVisible(false);
-        medicalHistoryProceduresPane.setVisible(false);
-        historyGridPane.setVisible(false);
-        medicationsPane.setVisible(false);
-        waitingListPane.setVisible(true);
-        setUndoRedoButtonsDisabled(waitingListUndoStack.isEmpty(), waitingListRedoStack.isEmpty());
-        titleBar.setTitle(currentUser.getPreferredName(), "User", "Waiting List");
-    }
-
-    /**
-     * Sets the medications pane as the visible pane
-     */
-    public void showMedicationsPane() {
-        welcomePane.setVisible(false);
-        attributesGridPane.setVisible(false);
-        historyGridPane.setVisible(false);
-        medicalHistoryDiseasesPane.setVisible(false);
-        medicalHistoryProceduresPane.setVisible(false);
-        medicationsPane.setVisible(true);
-        waitingListPane.setVisible(false);
-        setUndoRedoButtonsDisabled(medicationUndoStack.isEmpty(), medicationRedoStack.isEmpty());
-        titleBar.setTitle(currentUser.getPreferredName(), "User", "Medications");
-    }
-
-    /**
-     * Sets the User Attribute pane as the visible pane
-     */
-    public void showAttributesPane() {
-        welcomePane.setVisible(false);
-        attributesGridPane.setVisible(true);
-        historyGridPane.setVisible(false);
-        medicalHistoryDiseasesPane.setVisible(false);
-        medicalHistoryProceduresPane.setVisible(false);
-        medicationsPane.setVisible(false);
-        waitingListPane.setVisible(false);
-        titleBar.setTitle(currentUser.getPreferredName(), "User", "Attributes");
-    }
-
-    /**
-     * Sets the diseases pane as the visible pane
-     */
-    public void showMedicalHistoryDiseasesPane() {
-        welcomePane.setVisible(false);
-        attributesGridPane.setVisible(false);
-        historyGridPane.setVisible(false);
-        medicalHistoryDiseasesPane.setVisible(true);
-        medicalHistoryProceduresPane.setVisible(false);
-        medicationsPane.setVisible(false);
-        waitingListPane.setVisible(false);
-        setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), attributeRedoStack.isEmpty());
-        titleBar.setTitle(currentUser.getPreferredName(), "User", "Disease History");
-        setUndoRedoButtonsDisabled(diseaseUndoStack.isEmpty(), diseaseRedoStack.isEmpty());
-    }
-
-    /**
-     * Sets the medical history pane as the visible pane
-     */
-    public void showMedicalHistoryProceduresPane() {
-        welcomePane.setVisible(false);
-        attributesGridPane.setVisible(false);
-        historyGridPane.setVisible(false);
-        medicalHistoryDiseasesPane.setVisible(false);
-        medicalHistoryProceduresPane.setVisible(true);
-        medicationsPane.setVisible(false);
-        waitingListPane.setVisible(false);
-        setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), attributeRedoStack.isEmpty());
-        titleBar.setTitle(currentUser.getPreferredName(), "User", "Procedure History");
     }
 
     /**
      * Sets the welcome pane as the visible pane
      */
     public void showWelcomePane() {
+        hideAllTabs();
         welcomePane.setVisible(true);
-        attributesGridPane.setVisible(false);
-        historyGridPane.setVisible(false);
-        medicalHistoryDiseasesPane.setVisible(false);
-        medicalHistoryProceduresPane.setVisible(false);
-        medicationsPane.setVisible(false);
-        waitingListPane.setVisible(false);
-        setUndoRedoButtonsDisabled(true, true);
         titleBar.setTitle(currentUser.getPreferredName(), "User", "Home");
     }
 
     /**
-     * Highlights the checkboxes in red if the user is also waiting to receive an organ of that type.
-     * A tooltip is also added to highlighted checkboxes which tells the user what the problem is
+     * Sets the User Attribute pane as the visible pane
      */
-    public void highlightOrganCheckBoxes(){
-        System.out.println("re-drawing");
-        for(Organ organ: Organ.values()){
-            if(organTickBoxes.get(organ).getStyleClass().contains("highlighted-checkbox")){
-                organTickBoxes.get(organ).getStyleClass().remove("highlighted-checkbox");
-                organTickBoxes.get(organ).setTooltip(null);
-            }
-            for(WaitingListItem item: currentUser.getWaitingListItems()){
-                if(!organTickBoxes.get(organ).getStyleClass().contains("highlighted-checkbox") && item.getOrganType()==organ && organTickBoxes.get(organ).isSelected()){
-                    organTickBoxes.get(organ).getStyleClass().add("highlighted-checkbox");
-                    organTickBoxes.get(organ).setTooltip(new Tooltip("User is waiting to receive this organ"));
-                }
-            }
-        }
+    public void showAttributesPane() {
+        hideAllTabs();
+        attributesPane.setVisible(true);
+        setButtonSelected(userAttributesButton, true);
+        setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), attributeRedoStack.isEmpty());
+        System.out.println(currentUser);
+        System.out.println(currentUser.getPreferredName());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Attributes");
+    }
+
+    /**
+     * Sets the medications pane as the visible pane
+     */
+    public void showMedicationsPane() {
+        hideAllTabs();
+        medicationsPane.setVisible(true);
+        setButtonSelected(medicationsButton, true);
+        setUndoRedoButtonsDisabled(medicationUndoStack.isEmpty(), medicationRedoStack.isEmpty());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Medications");
+    }
+
+    /**
+     * Sets the diseases pane as the visible pane
+     */
+    public void showMedicalHistoryDiseasesPane() {
+        hideAllTabs();
+        medicalHistoryDiseasesPane.setVisible(true);
+        setButtonSelected(diseasesButton, true);
+        setUndoRedoButtonsDisabled(diseaseUndoStack.isEmpty(), diseaseRedoStack.isEmpty());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Disease History");
+    }
+
+    /**
+     * Sets the medical history pane as the visible pane
+     */
+    public void showMedicalHistoryProceduresPane() {
+        hideAllTabs();
+        medicalHistoryProceduresPane.setVisible(true);
+        setButtonSelected(proceduresButton, true);
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Procedure History");
+    }
+
+    /**
+     * Sets the history pane as the visible pane
+     */
+    public void showHistoryPane() {
+        hideAllTabs();
+        historyGridPane.setVisible(true);
+        setButtonSelected(historyButton, true);
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Action History");
+    }
+
+    public void showWaitingListPane() {
+        hideAllTabs();
+        waitingListPane.setVisible(true);
+        setUndoRedoButtonsDisabled(waitingListUndoStack.isEmpty(), waitingListRedoStack.isEmpty());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Waiting List");
     }
 
 
@@ -588,199 +463,20 @@ public class UserWindowController implements Initializable {
     }
 
     /**
-     * Function which takes the current user object that has logged in and
-     * takes all their attributes and populates the user attributes on the attributes pane accordingly.
-     */
-    public void populateUserFields() {
-        settingAttributesLabel.setText("Attributes for " + currentUser.getPreferredName());
-        String[] splitNames = currentUser.getNameArray();
-        firstNameField.setText(splitNames[0]);
-        if (splitNames.length > 2) {
-            String[] middleName = new String[splitNames.length - 2];
-            System.arraycopy(splitNames, 1, middleName, 0, splitNames.length - 2);
-            middleNameField.setText(String.join(",", middleName));
-            lastNameField.setText(splitNames[splitNames.length - 1]);
-        } else if (splitNames.length == 2) {
-            middleNameField.setText("");
-            lastNameField.setText(splitNames[1]);
-        } else {
-            middleNameField.setText("");
-            lastNameField.setText("");
-        }
-        String[] splitPreferredNames = currentUser.getPreferredNameArray();
-        preferredFirstNameField.setText(splitPreferredNames[0]);
-        if (splitPreferredNames.length > 2) {
-            String[] preferredMiddleName = new String[splitPreferredNames.length - 2];
-            System.arraycopy(splitPreferredNames, 1, preferredMiddleName, 0, splitPreferredNames.length - 2);
-            preferredMiddleNamesField.setText(String.join(",", preferredMiddleName));
-            preferredLastNameField.setText(splitPreferredNames[splitPreferredNames.length - 1]);
-        } else if (splitPreferredNames.length == 2) {
-            preferredMiddleNamesField.setText("");
-            preferredLastNameField.setText(splitPreferredNames[1]);
-        } else {
-            preferredMiddleNamesField.setText("");
-            preferredLastNameField.setText("");
-        }
-        addressField.setText(currentUser.getCurrentAddress());
-        regionField.setText(currentUser.getRegion());
-
-        dateOfBirthPicker.setValue(currentUser.getDateOfBirth());
-        dateOfDeathPicker.setValue(currentUser.getDateOfDeath());
-        updateAge();
-
-        bloodPressureTextField.setText(currentUser.getBloodPressure());
-
-        genderComboBox.setValue(currentUser.getGender());
-        genderIdentityComboBox.setValue(currentUser.getGenderIdentity());
-        bloodTypeComboBox.setValue(currentUser.getBloodType());
-        smokerStatusComboBox.setValue(currentUser.getSmokerStatus());
-        alcoholConsumptionComboBox.setValue(currentUser.getAlcoholConsumption());
-
-        for (Organ key : organTickBoxes.keySet()) {
-            organTickBoxes.get(key).setSelected(currentUser.getOrgans().contains(key));
-        }
-
-        weightField.setText(currentUser.getWeight() == -1 ? "" : Double.toString(currentUser.getWeight()));
-        heightField.setText(currentUser.getHeight() == -1 ? "" : Double.toString(currentUser.getHeight()));
-
-        updateBMI();
-        updateBloodPressure();
-        highlightOrganCheckBoxes();
-    }
-
-    /**
-     * Function which takes all the inputs of the user attributes window.
-     * Checks if all these inputs are valid and then sets the user's attributes to those inputted.
-     */
-    private boolean updateUser() {
-        //Extract names from user
-        String firstName = firstNameField.getText();
-        String[] middleNames = middleNameField.getText().isEmpty() ? new String[]{""} : middleNameField.getText().split(",");
-        String lastName = lastNameField.getText();
-
-        int isLastName = lastNameField.getText() == null || lastNameField.getText().isEmpty() ? 0 : 1;
-        String[] name = new String[1 + middleNames.length + isLastName];
-        name[0] = firstName;
-        System.arraycopy(middleNames, 0, name, 1, middleNames.length);
-        if (isLastName == 1) {
-            name[name.length - 1] = lastName;
-        }
-
-        String preferredFirstName = preferredFirstNameField.getText();
-        String[] preferredMiddleNames = preferredMiddleNamesField.getText().isEmpty() ? new String[]{""} : preferredMiddleNamesField.getText().split(",");
-        System.out.println(preferredMiddleNames[0]);
-        String preferredLastName = preferredLastNameField.getText();
-
-        int isPreferredLastName = preferredLastNameField.getText() == null || preferredLastNameField.getText().isEmpty() ? 0 : 1;
-        String[] preferredName = new String[1 + preferredMiddleNames.length + isPreferredLastName];
-        preferredName[0] = preferredFirstName;
-        System.arraycopy(preferredMiddleNames, 0, preferredName, 1, preferredMiddleNames.length);
-        if (isLastName == 1) {
-            preferredName[preferredName.length - 1] = preferredLastName;
-        }
-
-
-        double userHeight = -1;
-        if (!heightField.getText().equals("")) {
-            try {
-                userHeight = Double.parseDouble(heightField.getText());
-                currentUser.setHeight(userHeight);
-            } catch (NumberFormatException e) {
-                WindowManager.createAlert(AlertType.ERROR, "Error", "Error with the Height Input ", "Please input a valid height input.").show();
-                return false;
-            }
-        }
-
-        double userWeight = -1;
-        if (!weightField.getText().equals("")) {
-            try {
-                userWeight = Double.parseDouble(weightField.getText());
-                currentUser.setWeight(userWeight);
-            } catch (NumberFormatException e) {
-                WindowManager.createAlert(AlertType.ERROR, "Error", "Error with the Weight Input ", "Please input a valid weight input.").show();
-                return false;
-            }
-        }
-
-        String userBloodPressure = "";
-        String bloodPressure = bloodPressureTextField.getText();
-        if (bloodPressure != null && !bloodPressure.equals("")) {
-            String[] bloodPressureList = bloodPressureTextField.getText().split("/");
-            if (bloodPressureList.length != 2) {
-                WindowManager.createAlert(AlertType.ERROR, "Error", "Error with the Blood Pressure Input ", "Please input a valid blood pressure " +
-                        "input.").show();
-                return false;
-            } else {
-                for (String pressureComponent : bloodPressureList) {
-                    try {
-                        Integer.parseInt(pressureComponent);
-                    } catch (NumberFormatException e) {
-                        WindowManager.createAlert(AlertType.ERROR, "Error", "Error with the Blood Pressure Input ", "Please input a valid blood " +
-                                "pressure input.").show();
-                        return false;
-                    }
-                }
-                userBloodPressure = bloodPressureTextField.getText();
-            }
-        }
-
-        LocalDate currentDate = LocalDate.now();
-        if (dateOfBirthPicker.getValue().isAfter(currentDate)) {
-            WindowManager.createAlert(AlertType.ERROR, "Error", "Error with the Date Input ", "The date of birth cannot be after today.").show();
-            return false;
-        } else if (dateOfDeathPicker.getValue() != null && dateOfDeathPicker.getValue().isAfter(currentDate)) {
-            WindowManager.createAlert(AlertType.ERROR, "Error", "Error with the Date Input ", "The date of death cannot be after today.").show();
-            return false;
-        } else if (dateOfDeathPicker.getValue() != null && dateOfBirthPicker.getValue().isAfter(dateOfDeathPicker.getValue())) {
-            WindowManager.createAlert(AlertType.ERROR, "Error", "Error with the Date Input ", "The date of birth cannot be after the date of death" +
-                    ".").show();
-            return false;
-        }
-
-        //Commit changes
-        currentUser.setNameArray(name);
-        currentUser.setPreferredNameArray(preferredName);
-        currentUser.setHeight(userHeight);
-        currentUser.setWeight(userWeight);
-        currentUser.setBloodPressure(userBloodPressure);
-        currentUser.setDateOfBirth(dateOfBirthPicker.getValue());
-        currentUser.setDateOfDeath(dateOfDeathPicker.getValue());
-        currentUser.setGender(genderComboBox.getValue());
-        currentUser.setGenderIdentity(genderIdentityComboBox.getValue());
-        currentUser.setBloodType(bloodTypeComboBox.getValue());
-        currentUser.setAlcoholConsumption(alcoholConsumptionComboBox.getValue());
-        currentUser.setSmokerStatus(smokerStatusComboBox.getValue());
-        currentUser.setRegion(regionField.getText());
-        currentUser.setCurrentAddress(addressField.getText());
-        for (Organ key : organTickBoxes.keySet()) {
-            if (currentUser.getOrgans().contains(key)) {
-                if (!organTickBoxes.get(key).isSelected()) {
-                    currentUser.getOrgans().remove(key);
-                }
-            } else {
-                if (organTickBoxes.get(key).isSelected()) {
-                    currentUser.getOrgans().add(key);
-                }
-            }
-        }
-        settingAttributesLabel.setText("Attributes for " + currentUser.getPreferredName());
-        userDisplayText.setText("Currently logged in as: " + currentUser.getPreferredName());
-        System.out.println(currentUser.toString());
-        return true;
-    }
-
-    /**
      * Saves the current state of the GUI.
      * Gets all the inputs for the user attributes and sets the user attributes to those by calling the update user function.
      * Then calls the populate user function to repopulate the user fields.
      */
     public void save() {
         Alert alert = WindowManager.createAlert(AlertType.CONFIRMATION, "Are you sure?",
-                "Are you sure would like to update the current user? ", "By doing so, the user will be updated with all filled in fields.");
+            "Are you sure would like to update the current user? ", "By doing so, the user will be updated with all filled in fields.");
         Optional<ButtonType> result = alert.showAndWait();
-        if (result.get() == ButtonType.OK && updateUser()) {
+        if (result.get() == ButtonType.OK && attributesController.updateUser()) {
+            medicationsController.updateUser();
+            diseasesController.updateUser();
+            proceduresController.updateUser();
             IO.saveUsers(IO.getUserPath(), ProfileType.USER);
-            populateUserFields();
+            attributesController.populateUserFields();
             String text = History.prepareFileStringGUI(currentUser.getId(), "update");
             History.printToFile(streamOut, text);
             populateHistoryTable();
@@ -799,21 +495,19 @@ public class UserWindowController implements Initializable {
      */
     public void undo() {
         titleBar.saved(false);
-        if (attributesGridPane.isVisible()) {
-            attributeFieldUnfocused();
+        if (attributesPane.isVisible()) {
+            attributesController.attributeFieldUnfocused();
             //Add the current fields to the redo stack
             attributeRedoStack.add(new User(currentUser));
             //Copy the attribute information from the top element of the undo stack
             currentUser.copyFieldsFrom(attributeUndoStack.getLast());
             //Remove the top element of the undo stack
             attributeUndoStack.removeLast();
-            populateUserFields();
+            attributesController.populateUserFields();
 
             setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), false);
-            String text = History.prepareFileStringGUI(currentUser.getId(), "undo");
-            History.printToFile(streamOut, text);
-            populateHistoryTable();
         } else if (medicationsPane.isVisible()) {
+            medicationsController.updateUser();
             //Add the current medication lists to the redo stack
             medicationRedoStack.add(new User(currentUser));
             //Copy the medication lists from the top element of the undo stack
@@ -822,34 +516,39 @@ public class UserWindowController implements Initializable {
             medicationUndoStack.removeLast();
 
             setUndoRedoButtonsDisabled(medicationUndoStack.isEmpty(), false);
-            WindowManager.updateMedications();
+            medicationsController.updateMedications();
         } else if (waitingListPane.isVisible()) {
             waitingListRedoStack.add(new User(currentUser));
-            currentUser.copyWaitingListsFrom(waitingListUndoStack.get(waitingListUndoStack.size() - 1));
-            waitingListUndoStack.remove(waitingListUndoStack.size() - 1);
+            currentUser.copyWaitingListsFrom(waitingListUndoStack.getLast());
+            waitingListUndoStack.removeLast();
             setUndoRedoButtonsDisabled(waitingListUndoStack.isEmpty(), false);
-            WindowManager.updateWaitingList();
+            waitingListController.populateWaitingList();
         } else if (medicalHistoryProceduresPane.isVisible()) {
+            proceduresController.updateUser();
             //Add the current procedures lists to the redo stack
             procedureRedoStack.add(new User(currentUser));
-            //Copy the proceudres lists from the top element of the undo stack
-            currentUser.copyProceduresListsFrom(procedureUndoStack.get(procedureUndoStack.size() - 1));
+            //Copy the procedures lists from the top element of the undo stack
+            currentUser.copyProceduresListsFrom(procedureUndoStack.getLast());
             //Remove the top element of the undo stack
-            procedureUndoStack.remove(procedureUndoStack.size() - 1);
+            procedureUndoStack.removeLast();
 
             setUndoRedoButtonsDisabled(procedureUndoStack.isEmpty(), false);
-            WindowManager.updateProcedures();
+            proceduresController.updateProcedures();
         } else if (medicalHistoryDiseasesPane.isVisible()) {
+            diseasesController.updateUser();
             //Add the current disease lists to the redo stack
             diseaseRedoStack.add(new User(currentUser));
             //Copy the disease lists from the top element of the undo stack
-            currentUser.copyDiseaseListsFrom(diseaseUndoStack.get(diseaseUndoStack.size() - 1));
+            currentUser.copyDiseaseListsFrom(diseaseUndoStack.getLast());
             //Remove the top element of the undo stack
-            diseaseUndoStack.remove(diseaseUndoStack.size() - 1);
+            diseaseUndoStack.removeLast();
 
             setUndoRedoButtonsDisabled(diseaseUndoStack.isEmpty(), false);
-            WindowManager.updateDiseases();
+            diseasesController.updateDiseases();
         }
+        String text = History.prepareFileStringGUI(currentUser.getId(), "undo");
+        History.printToFile(streamOut, text);
+        populateHistoryTable();
         statusIndicator.setStatus("Undid last action", false);
         titleBar.saved(false);
     }
@@ -859,21 +558,19 @@ public class UserWindowController implements Initializable {
      * Then checks to see if there are any other actions that can be redone and adjusts the buttons accordingly.
      */
     public void redo() {
-        if (attributesGridPane.isVisible()) {
-            attributeFieldUnfocused();
+        if (attributesPane.isVisible()) {
+            attributesController.attributeFieldUnfocused();
             //Add the current fields to the undo stack
             attributeUndoStack.add(new User(currentUser));
             //Copy the attribute information from the top element of the redo stack
             currentUser.copyFieldsFrom(attributeRedoStack.getLast());
             //Remove the top element of the redo stack
             attributeRedoStack.removeLast();
-            populateUserFields();
+            attributesController.populateUserFields();
 
             setUndoRedoButtonsDisabled(false, attributeRedoStack.isEmpty());
-            String text = History.prepareFileStringGUI(currentUser.getId(), "redo");
-            History.printToFile(streamOut, text);
-            populateHistoryTable();
         } else if (medicationsPane.isVisible()) {
+            medicationsController.updateUser();
             //Add the current medication lists to the undo stack
             medicationUndoStack.add(new User(currentUser));
             //Copy the medications lists from the top element of the redo stack
@@ -882,99 +579,41 @@ public class UserWindowController implements Initializable {
             medicationRedoStack.removeLast();
 
             setUndoRedoButtonsDisabled(false, medicationRedoStack.isEmpty());
-            WindowManager.updateMedications();
+            medicationsController.updateMedications();
         } else if (waitingListPane.isVisible()) {
             waitingListUndoStack.add(new User(currentUser));
-            currentUser.copyWaitingListsFrom(waitingListRedoStack.get(waitingListRedoStack.size() - 1));
-            waitingListRedoStack.remove(waitingListRedoStack.size() - 1);
+            currentUser.copyWaitingListsFrom(waitingListRedoStack.getLast());
+            waitingListRedoStack.removeLast();
             setUndoRedoButtonsDisabled(false, waitingListRedoStack.isEmpty());
-            WindowManager.updateWaitingList();
+            waitingListController.populateWaitingList();
         } else if (medicalHistoryProceduresPane.isVisible()) {
+            proceduresController.updateUser();
             //Add the current procedures lists to the redo stack
             procedureUndoStack.add(new User(currentUser));
-            //Copy the proceudres lists from the top element of the undo stack
-            currentUser.copyProceduresListsFrom(procedureRedoStack.get(procedureRedoStack.size() - 1));
+            //Copy the procedures lists from the top element of the undo stack
+            currentUser.copyProceduresListsFrom(procedureRedoStack.getLast());
             //Remove the top element of the undo stack
-            procedureRedoStack.remove(procedureRedoStack.size() - 1);
+            procedureRedoStack.removeLast();
 
             setUndoRedoButtonsDisabled(false, procedureRedoStack.isEmpty());
-            WindowManager.updateProcedures();
+            proceduresController.updateProcedures();
         } else if (medicalHistoryDiseasesPane.isVisible()) {
+            diseasesController.updateUser();
             //Add the current disease lists to the redo stack
             diseaseUndoStack.add(new User(currentUser));
             //Copy the disease lists from the top element of the undo stack
-            currentUser.copyDiseaseListsFrom(diseaseRedoStack.get(diseaseRedoStack.size() - 1));
+            currentUser.copyDiseaseListsFrom(diseaseRedoStack.getLast());
             //Remove the top element of the undo stack
-            diseaseRedoStack.remove(diseaseRedoStack.size() - 1);
+            diseaseRedoStack.removeLast();
 
-            setUndoRedoButtonsDisabled(false, medicationRedoStack.isEmpty());
-            WindowManager.updateDiseases();
+            setUndoRedoButtonsDisabled(false, diseaseRedoStack.isEmpty());
+            diseasesController.updateDiseases();
         }
+        String text = History.prepareFileStringGUI(currentUser.getId(), "redo");
+        History.printToFile(streamOut, text);
+        populateHistoryTable();
         statusIndicator.setStatus("Redid last action", false);
         titleBar.saved(false);
-    }
-
-    /**
-     * Updates the age label for the user window based on the date of birth and death of the user.
-     */
-    public void updateAge() {
-        LocalDate dobirthPick = dateOfBirthPicker.getValue();
-        LocalDate dodeathPick = dateOfDeathPicker.getValue();
-
-        if (dodeathPick == null) {
-            LocalDate today = LocalDate.now();
-            double years = Duration.between(dobirthPick.atStartOfDay(), today.atStartOfDay()).toDays() / 365.00;
-            if (years < 0) {
-                ageLabel.setText("Age: Invalid Input.");
-            } else {
-                ageLabel.setText("Age: " + String.format("%.1f", years) + " years");
-            }
-        } else {
-            double years = Duration.between(dobirthPick.atStartOfDay(), dodeathPick.atStartOfDay()).toDays() / 365.00;
-            if (years < 0) {
-                ageLabel.setText("Age: Invalid Input.");
-            } else {
-                ageLabel.setText("Age: " + String.format("%.1f", years) + " years (At Death)");
-            }
-        }
-    }
-
-    /**
-     * Updates the BMI label for the user based on the height and weight fields inputted.
-     */
-    private void updateBMI() {
-        if (!heightField.getText().isEmpty() && !weightField.getText().isEmpty()) {
-            try {
-                double height = Double.parseDouble(heightField.getText());
-                double weight = Double.parseDouble(weightField.getText());
-                double BMI = (weight / Math.pow(height, 2)) * 10000;
-                bmiLabel.setText("BMI: " + String.format("%.2f", BMI));
-            } catch (NumberFormatException e) {
-                bmiLabel.setText("");
-            }
-        } else {
-            bmiLabel.setText("");
-        }
-    }
-
-    /**
-     * Updates the validity label of the blood pressure based on the input from the user.
-     */
-    private void updateBloodPressure() {
-        String[] pressureList = bloodPressureTextField.getText().split("/");
-        if (!bloodPressureTextField.getText().isEmpty()) {
-            if (pressureList.length == 2) {
-                try {
-                    Integer.parseInt(pressureList[0]);
-                    Integer.parseInt(pressureList[1]);
-                    bloodPressureLabel.setText("");
-                } catch (NumberFormatException e) {
-                    bloodPressureLabel.setText("Invalid input");
-                }
-            } else {
-                bloodPressureLabel.setText("Invalid input");
-            }
-        }
     }
 
     /**
@@ -1011,15 +650,6 @@ public class UserWindowController implements Initializable {
                         "account settings").show();
             }
         }
-    }
-
-
-    /**
-     * Disable the logout button if this user window is the child of a clinician window.
-     */
-    public void disableLogoutControls() {
-        logoutMenuItem.setDisable(true);
-        logoutButton.setDisable(true);
     }
 
     /**
@@ -1066,17 +696,12 @@ public class UserWindowController implements Initializable {
      * @param shown True if the waiting list button is to be shown, otherwise False
      */
     public void setControlsShown(Boolean shown) {
-        if (currentUser != null) {
-            if (currentUser.isReceiver()) {
-                waitingListButton.setVisible(true);
-            }
-        } else {
-            waitingListButton.setVisible(shown);
-        }
-    }
-
-
-    public ArrayList<User> getWaitingListUndoStack() {
-        return waitingListUndoStack;
+        waitingListController.setControlsShown(shown);
+        proceduresController.setControlsShown(shown);
+        diseasesController.setControlsShown(shown);
+        medicationsController.setControlsShown(shown);
+        logoutMenuItem.setDisable(shown);
+        logoutButton.setDisable(shown);
+        waitingListButton.setVisible((currentUser != null && currentUser.isReceiver()) || shown);
     }
 }
